--- a/myfirstreactapp/src/tailwind.css
+++ b/myfirstreactapp/src/tailwind.css
@@ -7,4 +7,36 @@
 
 body {
   background-color: #ffffff;
-}
+    margin:auto;
+    text-align: center;
+    font-family: 'Roboto', 'Montserrat', 'Helvetica Neue';
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: rgb(184, 200, 206);
+    text-align: justify;
+    font-size: 1rem;
+    bottom: 0.5rem;
+  }
+  
+  p {
+    font-size: 1.4rem;
+  }
+  
+  p1 {
+    font-size: 1rem;
+  }
+  
+  p2 {
+    font-size: 3rem;
+    font-family: 'Helvetica Neue';
+  }
+  
+  h1 {
+    font-size: 6rem;
+  }
+  
+  label{
+    font-size:4rem;
+    text-align: center;
+  }
+  
